--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                             <div class="card-subtitle">Just to see what can be achieved</div>
                             <hr class="cell-divide-hr">
                             <div class="price">
-                                <span class="currency">INR</span><span class="value">5000</span>
+                                <span class="currency">INR</span><span class="value">50K</span>
                                 <div class="frequency">once</div>
                             </div>
                             <hr class="cell-divide-hr">
@@ -438,7 +438,7 @@
                             <div class="card-subtitle">Very appropriate for the short term</div>
                             <hr class="cell-divide-hr">
                             <div class="price">
-                                <span class="currency">INR</span><span class="value">7000</span>
+                                <span class="currency">INR</span><span class="value">1 L</span>
                                 <div class="frequency">once</div>
                             </div>
                             <hr class="cell-divide-hr">
@@ -476,7 +476,7 @@
                             <div class="card-subtitle">Must have for large companies</div>
                             <hr class="cell-divide-hr">
                             <div class="price">
-                                <span class="currency">INR</span><span class="value">10000</span>
+                                <span class="currency">INR</span><span class="value">1.5L</span>
                                 <div class="frequency">once</div>
                             </div>
                             <hr class="cell-divide-hr">
@@ -737,10 +737,11 @@
                             <img class="img-fluid" src="images/srini.jpg" alt="alternative">
                         </div> <!-- end of image wrapper -->
                         <p class="p-large"><strong>Srinivasan</strong></p>
-                        <p class="job-title">CEO and Ethical Hacker</p>
+                        <p class="job-title">Founder and Mangaing Director</p>
+                        <p class="job-title">Cybersecurity Expert</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href="https://www.instagram.com/siddhu_ivy/">
+                                <a href="https://www.instagram.com/srinivasan_sundharrajan/">
                                     <i class="fas fa-circle fa-stack-2x facebook"></i>
                                     <i class="fab fa-facebook-f fa-stack-1x"></i>
                                 </a>
@@ -761,7 +762,7 @@
                             <img class="img-fluid" src="images/viswa.jpg" alt="alternative">
                         </div> <!-- end of image wrapper -->
                         <p class="p-large"><strong>Viswesvaran</strong></p>
-                        <p class="job-title">CEO and Technical Advisor</p>
+                        <p class="job-title">CTO and Solution architect</p>
                         <span class="social-icons">
                             <span class="fa-stack">
                                 <a href="https://www.instagram.com/_vishwa_235_/">
@@ -794,8 +795,8 @@
                     <h2>Contact Information</h2>
                     <ul class="list-unstyled li-space-lg">
                         <li class="address">Don't hesitate to give us a call or send us a contact form message</li>
-                        <li><i class="fas fa-map-marker-alt"></i>Ammapet, Salem, 636003</li>
-                        <li><i class="fas fa-phone"></i><a class="turquoise" href="tel:9384143947">+91 7448927143</a></li>
+                        <li><i class="fas fa-map-marker-alt"></i>Thiruvanmiyur, chennai, 600041</li>
+                       <!---<li><i class="fas fa-phone"></i><a class="turquoise" href="tel:9384143947">+91 7448927143</a></li>-->
                         <li><i class="fas fa-envelope"></i><a class="turquoise" href="mailto:cryptoxcoder@gmail.com">cryptoxcoder@gmail.com</a></li>
                     </ul>
                 </div> <!-- end of col -->
@@ -803,7 +804,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100939.98555098464!2d-122.507640204439!3d37.757814996609724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan+Francisco%2C+CA%2C+USA!5e0!3m2!1sen!2sro!4v1498231462606" allowfullscreen></iframe>
+                       <!--<iframe src="https://www.google.com/maps/w6aXspajRq8A5jLT8" allowfullscreen></iframe>--> 
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1547.1284950495624!2d80.2648894387467!3d12.977491312620062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d5b9b3bfc6f%3A0x6959f97669f90baa!2sThiruvanmiyur%2C%20Chennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1735269425615!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
