--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h2>CyberSecuriy</h2>
+                        <h2>Cyber Security</h2>
                         <p>We Analyze an Market Risk and Hacker possiblity.So Enusure an Virtual Firewall and complete Firewall Installation Setup of Your Product ad Projects</p>
                         <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">LIGHTBOX</a>
                     </div> <!-- end of text-container -->
